# SharpTPU

./: .gitignore  README.md
HDL/: .gitignore  build.sbt
HDL/hw/spinal/sharpTPU/: Config.scala  MatTrans.scala  MatTransGlue.scala  axiGlue.scala  axilRegIF.scala  sharpTPUTop.scala  sharpTPUTopSim.scala
HDL/hw/spinal/sharpTPU/arithmetic/: accumUnit.scala  alignUnit.scala  arithDefine.scala  dotProdUnit.scala  mulUnit.scala  normRoundUnit.scala  packUnit.scala
HDL/hw/spinal/sharpTPU/buffer/: bufferLoader.scala  bufferWriter.scala  simpleDualPortRAM.scala  streamSdpRAM.scala
HDL/hw/verilog/: z_sdpram.v
HDL/testBench/: Makefile  dotProdUnit_TB.py  dotProdUnit_TB_FP16.py  results.xml  sharpTPU_TB.py  sharpTPU_TBv2.py
axi4Lite/: build.sbt
axi4Lite/hw/spinal/axi4Lite/: Config.scala  axi4Lite.scala
axi4Lite/tb/: Makefile  results.xml  test_Axi4.py  test_Axi4Lite.py  test_Axi4LiteManual.py
dataset/: README.md
floatMul/: build.sbt
floatMul/hw/spinal/FloatMultiplier/: Config.scala  FloatMultiplier.scala
floatMul/tb/: Makefile  dump.fst  results.xml  test_FloatMul.py
funcModel/: CMakeLists.txt  dataset_test.cpp  half_convertor.cpp  half_convertor.h  main.cpp  modelFP.cpp  modelFP.h  modelFP_accum.cpp  modelFP_add.cpp  modelFP_dot.cpp  modelFP_dotv1.cpp  modelFP_mul.cpp  modelFP_pack.cpp  modelFP_test.cpp  modelFP_util.cpp
matTrans/: build.sbt
matTrans/hw/spinal/MatTrans/: Config.scala  MatTrans.scala
matTrans/tb/: Makefile  dump.fst  results.xml  test_MatTrans.py  test_MatTransMxN.py
